Step_8/backend_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deploy
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: containerbackend
        image: python:3.9
        ports:
        - containerPort: 80
        command: ["tail", "-f", "/dev/null"]
