Step_8/database_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database-service
spec:
  ports:
  - port: 3306
  selector:
    app: database
  type: ClusterIP
