Step_8/database_networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: database-networkpolicy
spec:
  podSelector:
    matchLabels:
      app: database
  ingress: []
  egress: []
